--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.jar=${dist.dir}/ElmanNetwork.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.encog-core-3.2.0.jar=C:\\Users\\1151994\\Downloads\\encog-core-3.2.0\\lib\\encog-core-3.2.0.jar
+file.reference.encog-core-3.2.0.jar=C:\\Users\\1142191\\Desktop\\ElmanNetwork\\dist\\lib\\encog-core-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
